--- a/SmartHome/SHDetailviewLivingroomTVVC.xib
+++ b/SmartHome/SHDetailviewLivingroomTVVC.xib
@@ -81,13 +81,13 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="1043776169">
+					<object class="IBUIImageView" id="156184259">
 						<reference key="NSNextResponder" ref="766721923"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{625, 266}, {275, 36}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1028325343"/>
+						<reference key="NSNextKeyView" ref="1018968716"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -144,7 +144,7 @@
 						<reference key="IBUIFontDescription" ref="531272228"/>
 						<reference key="IBUIFont" ref="1034648425"/>
 					</object>
-					<object class="IBUIImageView" id="310007516">
+					<object class="IBUIImageView" id="197251702">
 						<reference key="NSNextResponder" ref="766721923"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{143, 252}, {308, 277}}</string>
@@ -165,7 +165,7 @@
 						<string key="NSFrame">{{172, 283}, {250, 216}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1018968716"/>
+						<reference key="NSNextKeyView" ref="156184259"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<bool key="IBUIShowsSelectionIndicator">YES</bool>
@@ -189,7 +189,7 @@
 						<string key="NSFrame">{{709, 126}, {96, 40}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="310007516"/>
+						<reference key="NSNextKeyView" ref="197251702"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -242,7 +242,7 @@
 						<string key="NSFrame">{{172, 252}, {156, 26}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1043776169"/>
+						<reference key="NSNextKeyView" ref="1028325343"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -334,9 +334,17 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">imageViewWheelFrame</string>
 						<reference key="source" ref="841351856"/>
-						<reference key="destination" ref="310007516"/>
+						<reference key="destination" ref="197251702"/>
 					</object>
 					<int key="connectionID">811</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">imageViewVolumeTriangle</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="156184259"/>
+					</object>
+					<int key="connectionID">901</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -437,11 +445,11 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="366551267">
+							<object class="IBNSLayoutConstraint" id="26565574">
 								<reference key="firstItem" ref="1018968716"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="1043776169"/>
+								<reference key="secondItem" ref="156184259"/>
 								<int key="secondAttribute">6</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
@@ -473,7 +481,7 @@
 								<reference key="firstItem" ref="766721923"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="1043776169"/>
+								<reference key="secondItem" ref="156184259"/>
 								<int key="secondAttribute">6</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
@@ -485,8 +493,8 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="878804907">
-								<reference key="firstItem" ref="1043776169"/>
+							<object class="IBNSLayoutConstraint" id="603983018">
+								<reference key="firstItem" ref="156184259"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="766721923"/>
@@ -502,7 +510,7 @@
 								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="661990621">
-								<reference key="firstItem" ref="1043776169"/>
+								<reference key="firstItem" ref="156184259"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="1018968716"/>
@@ -517,8 +525,8 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="309623138">
-								<reference key="firstItem" ref="1043776169"/>
+							<object class="IBNSLayoutConstraint" id="367538921">
+								<reference key="firstItem" ref="156184259"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="1028325343"/>
@@ -533,7 +541,7 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="325867547">
+							<object class="IBNSLayoutConstraint" id="554287931">
 								<reference key="firstItem" ref="1028325343"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -549,7 +557,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="308426415">
+							<object class="IBNSLayoutConstraint" id="475569971">
 								<reference key="firstItem" ref="1028325343"/>
 								<int key="firstAttribute">10</int>
 								<int key="relation">0</int>
@@ -565,7 +573,7 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="545347420">
+							<object class="IBNSLayoutConstraint" id="182154400">
 								<reference key="firstItem" ref="309616689"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -613,11 +621,11 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="498459595">
+							<object class="IBNSLayoutConstraint" id="902009535">
 								<reference key="firstItem" ref="730068739"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="310007516"/>
+								<reference key="secondItem" ref="197251702"/>
 								<int key="secondAttribute">3</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
@@ -661,8 +669,8 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="207810581">
-								<reference key="firstItem" ref="310007516"/>
+							<object class="IBNSLayoutConstraint" id="845991433">
+								<reference key="firstItem" ref="197251702"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="766721923"/>
@@ -677,8 +685,8 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="162147070">
-								<reference key="firstItem" ref="310007516"/>
+							<object class="IBNSLayoutConstraint" id="110974924">
+								<reference key="firstItem" ref="197251702"/>
 								<int key="firstAttribute">9</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="309616689"/>
@@ -781,8 +789,8 @@
 							<reference ref="1018968716"/>
 							<reference ref="1028325343"/>
 							<reference ref="730068739"/>
-							<reference ref="310007516"/>
-							<reference ref="1043776169"/>
+							<reference ref="197251702"/>
+							<reference ref="156184259"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -1134,10 +1142,10 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">801</int>
-						<reference key="object" ref="310007516"/>
+						<reference key="object" ref="197251702"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="81838777">
-								<reference key="firstItem" ref="310007516"/>
+							<object class="IBNSLayoutConstraint" id="1049323459">
+								<reference key="firstItem" ref="197251702"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
 								<nil key="secondItem"/>
@@ -1147,13 +1155,13 @@
 									<double key="value">277</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="310007516"/>
+								<reference key="containingView" ref="197251702"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="999970117">
-								<reference key="firstItem" ref="310007516"/>
+							<object class="IBNSLayoutConstraint" id="237592245">
+								<reference key="firstItem" ref="197251702"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
 								<nil key="secondItem"/>
@@ -1163,7 +1171,7 @@
 									<double key="value">308</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="310007516"/>
+								<reference key="containingView" ref="197251702"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
@@ -1173,40 +1181,40 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">806</int>
-						<reference key="object" ref="999970117"/>
-						<reference key="parent" ref="310007516"/>
+						<reference key="object" ref="237592245"/>
+						<reference key="parent" ref="197251702"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">807</int>
-						<reference key="object" ref="81838777"/>
-						<reference key="parent" ref="310007516"/>
+						<reference key="object" ref="1049323459"/>
+						<reference key="parent" ref="197251702"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">809</int>
-						<reference key="object" ref="162147070"/>
+						<reference key="object" ref="110974924"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">810</int>
-						<reference key="object" ref="207810581"/>
+						<reference key="object" ref="845991433"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">815</int>
-						<reference key="object" ref="498459595"/>
+						<reference key="object" ref="902009535"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">829</int>
-						<reference key="object" ref="308426415"/>
+						<reference key="object" ref="475569971"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">831</int>
-						<reference key="object" ref="1043776169"/>
+						<reference key="object" ref="156184259"/>
 						<array class="NSMutableArray" key="children">
 							<object class="IBNSLayoutConstraint" id="881336390">
-								<reference key="firstItem" ref="1043776169"/>
+								<reference key="firstItem" ref="156184259"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
 								<nil key="secondItem"/>
@@ -1216,13 +1224,13 @@
 									<double key="value">275</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="1043776169"/>
+								<reference key="containingView" ref="156184259"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="84542013">
-								<reference key="firstItem" ref="1043776169"/>
+							<object class="IBNSLayoutConstraint" id="996495007">
+								<reference key="firstItem" ref="156184259"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
 								<nil key="secondItem"/>
@@ -1232,7 +1240,7 @@
 									<double key="value">36</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="1043776169"/>
+								<reference key="containingView" ref="156184259"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
@@ -1242,17 +1250,17 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">839</int>
-						<reference key="object" ref="545347420"/>
+						<reference key="object" ref="182154400"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">840</int>
-						<reference key="object" ref="309623138"/>
+						<reference key="object" ref="367538921"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">847</int>
-						<reference key="object" ref="366551267"/>
+						<reference key="object" ref="26565574"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -1262,18 +1270,18 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">892</int>
-						<reference key="object" ref="325867547"/>
+						<reference key="object" ref="554287931"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">897</int>
-						<reference key="object" ref="878804907"/>
+						<reference key="object" ref="603983018"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">898</int>
-						<reference key="object" ref="84542013"/>
-						<reference key="parent" ref="1043776169"/>
+						<reference key="object" ref="996495007"/>
+						<reference key="parent" ref="156184259"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">899</int>
@@ -1283,7 +1291,7 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">900</int>
 						<reference key="object" ref="881336390"/>
-						<reference key="parent" ref="1043776169"/>
+						<reference key="parent" ref="156184259"/>
 					</object>
 				</array>
 			</object>
@@ -1305,22 +1313,22 @@
 					<reference ref="682361020"/>
 					<reference ref="704493208"/>
 					<reference ref="1031860677"/>
-					<reference ref="162147070"/>
-					<reference ref="207810581"/>
+					<reference ref="110974924"/>
+					<reference ref="845991433"/>
 					<reference ref="826412585"/>
 					<reference ref="744788901"/>
-					<reference ref="498459595"/>
+					<reference ref="902009535"/>
 					<reference ref="527249794"/>
 					<reference ref="739150486"/>
-					<reference ref="545347420"/>
-					<reference ref="308426415"/>
-					<reference ref="325867547"/>
-					<reference ref="309623138"/>
+					<reference ref="182154400"/>
+					<reference ref="475569971"/>
+					<reference ref="554287931"/>
+					<reference ref="367538921"/>
 					<reference ref="661990621"/>
-					<reference ref="878804907"/>
+					<reference ref="603983018"/>
 					<reference ref="398083250"/>
 					<reference ref="1037303470"/>
-					<reference ref="366551267"/>
+					<reference ref="26565574"/>
 					<reference ref="954897325"/>
 					<reference ref="273610783"/>
 				</array>
@@ -1384,8 +1392,8 @@
 				<boolean value="NO" key="8.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="801.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="801.IBViewMetadataConstraints">
-					<reference ref="999970117"/>
-					<reference ref="81838777"/>
+					<reference ref="237592245"/>
+					<reference ref="1049323459"/>
 				</array>
 				<boolean value="NO" key="801.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="806.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1396,7 +1404,7 @@
 				<string key="829.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="831.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array key="831.IBViewMetadataConstraints">
-					<reference ref="84542013"/>
+					<reference ref="996495007"/>
 					<reference ref="881336390"/>
 				</array>
 				<boolean value="NO" key="831.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
@@ -1414,7 +1422,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">900</int>
+			<int key="maxID">901</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1454,6 +1462,7 @@
 						</object>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="imageViewVolumeTriangle">UIImageView</string>
 						<string key="imageViewWheelFrame">UIImageView</string>
 						<string key="labelTVChannelHelper">UILabel</string>
 						<string key="labelVolume">UILabel</string>
@@ -1462,6 +1471,10 @@
 						<string key="sliderTVVolume">UISlider</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="imageViewVolumeTriangle">
+							<string key="name">imageViewVolumeTriangle</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="imageViewWheelFrame">
 							<string key="name">imageViewWheelFrame</string>
 							<string key="candidateClassName">UIImageView</string>
